[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "flask>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.2",
]
